export interface IObserver {
    miseAJour(humidité: number, température: number): void;
}